# rust_watcher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cloud-api/: Cargo.toml
crates/cloud-api/src/: main.rs  storage.rs
crates/cloud-client/: Cargo.toml
crates/cloud-client/src/: lib.rs
crates/graph-builder/: Cargo.toml
crates/graph-builder/src/: endpoints.rs  filters.rs  ids.rs  lib.rs  rust.rs
crates/graph-builder/src/python/: api_routes.rs  imports.rs  mod.rs  parser.rs  relationships.rs  symbols.rs
crates/graph-builder/src/qml/: api_calls.rs  imports.rs  mod.rs  parser.rs  relationships.rs  symbols.rs
crates/graph-builder/src/typescript/: api_calls.rs  imports.rs  mod.rs  parser.rs  relationships.rs  symbols.rs
crates/graph-core/: Cargo.toml
crates/graph-core/src/: lib.rs
crates/graph-query/: Cargo.toml
crates/graph-query/src/: context_pack.rs  lib.rs  trace.rs
crates/local-agent/: Cargo.toml
crates/local-agent/src/: main.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  main.rs
crates/mcp-server/tests/: mcp_server.rs
crates/project-indexer/: Cargo.toml
crates/project-indexer/src/: lib.rs
crates/ra-client/: Cargo.toml
crates/ra-client/src/: lib.rs  runtime.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: analysis.rs  analyzer_paths.rs  lsp_runtime.rs  main.rs  python_ty.rs  qml_lsp.rs  trace.rs  typescript_lsp.rs
example/backend/: main.py
example/frontend/src/: App.tsx  main.tsx
example/qml/: Main.qml
example/qml/components/: PersonCard.qml
example/src/: main.rs
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/scripts/: capture-ui-screenshots.mjs
frontend/src/: main.tsx
frontend/src/app/: App.tsx  canvasMiniMapGuard.ts  mockData.ts  types.ts
frontend/src/app/api/: analyzerStatus.test.ts  analyzerStatus.ts  backendMessages.test.ts  backendMessages.ts  canvasSvgRecorder.ts  cloudAuth.ts  contextPack.test.ts  contextPack.ts  diagnostics.test.ts  diagnostics.ts  exportGraphSvg.ts  graphPatch.test.ts  graphPatch.ts  graphView.test.ts  graphView.ts  language.ts  patchHelpers.test.ts  patchHelpers.ts  savedViews.test.ts  savedViews.ts  semanticLayout.ts  svgExport.ts  trace.test.ts  trace.ts  useBackendGraph.ts  useCloudWorkspaceGraph.ts
frontend/src/app/components/: AnalysisTimeline.tsx  AnalyzerStatusSummary.tsx  AnimatedLiveCodeGraph.tsx  CloudLogin.tsx  CloudPortal.tsx  DenseGraphSuggestion.tsx  EmptyState.tsx  FilterBar.tsx  FocusBubbleControls.tsx  InspectorPanel.tsx  LiveCodeGraph.tsx  ProjectExplorer.tsx  SearchCommandPalette.tsx  TopToolbar.tsx
frontend/src/app/physics/: graphLayoutWorker.ts
frontend/src/app/utils/: time.ts
frontend/src/imports/pasted_text/: rust-code-center-ui.md
frontend/src/styles/: theme.css
tmp/ui-review/after/: NOTES.md
tmp/ui-review/before/: NOTES.md
