[package]
name = "cloud-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
futures-util.workspace = true
graph-core = { path = "../graph-core" }
graph-builder = { path = "../graph-builder" }
parking_lot.workspace = true
project-indexer = { path = "../project-indexer" }
ra-client = { path = "../ra-client" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
zip.workspace = true
