[package]
name = "cloud-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
graph-core = { path = "../graph-core" }
hex.workspace = true
project-indexer = { path = "../project-indexer" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
url.workspace = true
