[package]
name = "graph-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
graph-core = { path = "../graph-core" }
project-indexer = { path = "../project-indexer" }
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
uuid.workspace = true

[dev-dependencies]
graph-query = { path = "../graph-query" }
