[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
graph-builder = { path = "../graph-builder" }
graph-core = { path = "../graph-core" }
graph-query = { path = "../graph-query" }
project-indexer = { path = "../project-indexer" }
rmcp = { version = "1.8.0", default-features = false, features = ["server", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
uuid.workspace = true
