[package]
name = "web-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
dashmap.workspace = true
futures-util.workspace = true
graph-builder = { path = "../graph-builder" }
graph-core = { path = "../graph-core" }
notify.workspace = true
parking_lot.workspace = true
project-indexer = { path = "../project-indexer" }
ra-client = { path = "../ra-client" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
webbrowser.workspace = true
